--- a/Car_Insurance_Claim_Prediction.ipynb
+++ b/Car_Insurance_Claim_Prediction.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPM6gdf+jWUfW7FJMl3/5ST",
+      "authorship_tag": "ABX9TyOYPU0GRk1PnenkwolMKaN0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/lillibot2054/Car-Insurance-Claim-Prediction/blob/main/Car_Insurance_Claim_Prediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Upload the Dataset And Unzip It using This**"
+      ],
+      "metadata": {
+        "id": "a29atKnw_JyF"
+      }
     },
     {
       "cell_type": "code",
@@ -112,7 +121,7 @@
       "metadata": {
         "id": "XH7_eqMNrWYN"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -144,7 +153,7 @@
         "id": "eVRt0We4rZN_",
         "outputId": "96476f53-6e84-4ca7-bfc5-abf0c0a09543"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -188,7 +197,7 @@
         "id": "5ksXNzJfrZXz",
         "outputId": "ee8dea08-836f-4813-cad0-d5349026cda6"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -267,7 +276,7 @@
         "id": "MSL-MflxrZbp",
         "outputId": "aaf4c285-65a9-42d4-be3d-b237f8a36738"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -338,7 +347,7 @@
         "id": "2zdMzfxerZft",
         "outputId": "d6352223-2bf0-4279-8e30-9c6895350d32"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -380,7 +389,7 @@
       "metadata": {
         "id": "28j0fWAQrZjG"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -406,7 +415,7 @@
       "metadata": {
         "id": "SFd_6XKxrZmo"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -416,6 +425,15 @@
       ],
       "metadata": {
         "id": "BfqozlkIsu5_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Setup For Logistic Regression**"
+      ],
+      "metadata": {
+        "id": "kwE1YG9Z_hp5"
       }
     },
     {
@@ -465,7 +483,7 @@
         "id": "k8A0CWkTjeSy",
         "outputId": "db25a7e7-5984-430b-c1d2-6264c20f4c73"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -475,6 +493,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Logistic Regression**"
+      ],
+      "metadata": {
+        "id": "LKDqlc4w_qj5"
+      }
     },
     {
       "cell_type": "code",
@@ -526,7 +553,7 @@
         "id": "3sM1qd69rZqf",
         "outputId": "e847e0dd-5b11-475f-df8f-3e058dd2f9d2"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -549,15 +576,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "luRxz0HVjeUv"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -622,7 +640,7 @@
         },
         "outputId": "866ac07f-e1f6-4ffc-de2d-4691714782d0"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -709,7 +727,7 @@
         },
         "outputId": "e1224494-ba59-4f6c-824a-c9dc6b2fd78e"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -763,7 +781,7 @@
         "id": "HURtGqdertYh",
         "outputId": "115edc7f-7010-4600-b035-8fd5cb2b4623"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -826,7 +844,7 @@
         },
         "outputId": "de98a8bd-ca3d-41aa-d43c-76054208be95"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1041,9 +1059,9 @@
         "\n",
         "submission_df['is_claim'] = test_predictions\n",
         "\n",
-        "submission_df.to_csv(\"final_submissioni.csv\", index=False)\n",
+        "submission_df.to_csv(\"Final_submission_Updated.csv\", index=False)\n",
         "\n",
-        "print(\"Submission file saved as final_submission.csv\")\n",
+        "print(\"Submission file saved as Final_submission.csv\")\n",
         "submission_df.head()\n"
       ],
       "metadata": {
@@ -1054,7 +1072,7 @@
         },
         "outputId": "0a852e11-dc80-4ca8-d57a-450bb3865fe4"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
