--- a/Car_Insurance_Claim_Prediction.ipynb
+++ b/Car_Insurance_Claim_Prediction.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "toc_visible": true,
       "authorship_tag": "ABX9TyOYPU0GRk1PnenkwolMKaN0",
       "include_colab_link": true
     },
@@ -40,13 +39,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "UNof6-85qNty",
-        "outputId": "25886089-7a82-4d9c-f4b8-d4bf2299e5f2"
+        "outputId": "c5856f83-312e-43e1-acb2-d998eaf63a48"
       },
       "outputs": [
         {
@@ -54,9 +53,9 @@
           "name": "stdout",
           "text": [
             "Archive:  car_insurance_data.zip\n",
-            "replace sample_submission.csv? [y]es, [n]o, [A]ll, [N]one, [r]ename: n\n",
-            "replace test.csv? [y]es, [n]o, [A]ll, [N]one, [r]ename: nn\n",
-            "replace train.csv? [y]es, [n]o, [A]ll, [N]one, [r]ename: n\n"
+            "  inflating: sample_submission.csv   \n",
+            "  inflating: test.csv                \n",
+            "  inflating: train.csv               \n"
           ]
         }
       ],
@@ -121,7 +120,7 @@
       "metadata": {
         "id": "XH7_eqMNrWYN"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -151,15 +150,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eVRt0We4rZN_",
-        "outputId": "96476f53-6e84-4ca7-bfc5-abf0c0a09543"
+        "outputId": "8bb9fa8a-46d4-4bfb-89a3-4082431133f4"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "✅ Files loaded successfully\n",
+            " Files loaded successfully\n",
             "Train shape: (58592, 44)\n",
             "Test shape : (39063, 43)\n"
           ]
@@ -195,9 +194,9 @@
           "height": 178
         },
         "id": "5ksXNzJfrZXz",
-        "outputId": "ee8dea08-836f-4813-cad0-d5349026cda6"
+        "outputId": "106fcb36-a850-4c7b-b8fb-337898d125d4"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -249,7 +248,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -274,9 +273,9 @@
           "height": 84
         },
         "id": "MSL-MflxrZbp",
-        "outputId": "aaf4c285-65a9-42d4-be3d-b237f8a36738"
+        "outputId": "c471e805-6a36-453d-dc87-95e4faaccb84"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -313,7 +312,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
@@ -345,9 +344,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2zdMzfxerZft",
-        "outputId": "d6352223-2bf0-4279-8e30-9c6895350d32"
+        "outputId": "83606a7b-c577-430b-a647-406cdc1f6ebe"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -389,7 +388,7 @@
       "metadata": {
         "id": "28j0fWAQrZjG"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -415,7 +414,7 @@
       "metadata": {
         "id": "SFd_6XKxrZmo"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -481,9 +480,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "k8A0CWkTjeSy",
-        "outputId": "db25a7e7-5984-430b-c1d2-6264c20f4c73"
+        "outputId": "dfebcfff-4fa2-48d6-bfd4-a1a5befffe9c"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -551,9 +550,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3sM1qd69rZqf",
-        "outputId": "e847e0dd-5b11-475f-df8f-3e058dd2f9d2"
+        "outputId": "2d7c51c2-b9d9-48ab-8ed4-edb16d5d26e3"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -638,9 +637,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "866ac07f-e1f6-4ffc-de2d-4691714782d0"
+        "outputId": "4898fdfd-caec-4eb5-a940-6a7784caeae4"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -725,9 +724,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e1224494-ba59-4f6c-824a-c9dc6b2fd78e"
+        "outputId": "2fe7e078-6334-4648-b9d2-cba09ff4a5d8"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -779,9 +778,9 @@
           "height": 410
         },
         "id": "HURtGqdertYh",
-        "outputId": "115edc7f-7010-4600-b035-8fd5cb2b4623"
+        "outputId": "6e376ca7-6c22-4ee5-ba7f-69df71968e5d"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -842,9 +841,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 363
         },
-        "outputId": "de98a8bd-ca3d-41aa-d43c-76054208be95"
+        "outputId": "928f2233-e577-410d-c4a6-12cd8004be42"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -864,7 +863,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1e85b297-783b-4301-8bf9-e8284ff01158\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-54404716-71db-42e9-8165-96adc0695e5d\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -944,7 +943,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1e85b297-783b-4301-8bf9-e8284ff01158')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-54404716-71db-42e9-8165-96adc0695e5d')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -996,12 +995,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-1e85b297-783b-4301-8bf9-e8284ff01158 button.colab-df-convert');\n",
+              "        document.querySelector('#df-54404716-71db-42e9-8165-96adc0695e5d button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-1e85b297-783b-4301-8bf9-e8284ff01158');\n",
+              "        const element = document.querySelector('#df-54404716-71db-42e9-8165-96adc0695e5d');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1031,7 +1030,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 7
         }
       ]
     },
@@ -1070,15 +1069,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 224
         },
-        "outputId": "0a852e11-dc80-4ca8-d57a-450bb3865fe4"
+        "outputId": "cf9fafcc-5a66-46d8-cc00-81c015b42116"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "✅ Submission file saved as final_submission.csv\n"
+            "Submission file saved as Final_submission.csv\n"
           ]
         },
         {
@@ -1094,7 +1093,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f7db6300-8d57-4fe8-8ef0-c36b18692845\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e7e36bb9-0568-4be2-b5b0-bac2b62e9c8f\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1149,7 +1148,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f7db6300-8d57-4fe8-8ef0-c36b18692845')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e7e36bb9-0568-4be2-b5b0-bac2b62e9c8f')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1201,12 +1200,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-f7db6300-8d57-4fe8-8ef0-c36b18692845 button.colab-df-convert');\n",
+              "        document.querySelector('#df-e7e36bb9-0568-4be2-b5b0-bac2b62e9c8f button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-f7db6300-8d57-4fe8-8ef0-c36b18692845');\n",
+              "        const element = document.querySelector('#df-e7e36bb9-0568-4be2-b5b0-bac2b62e9c8f');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1236,7 +1235,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 8
         }
       ]
     }
